--- a/components/SearchResults/SearchResults.module.scss
+++ b/components/SearchResults/SearchResults.module.scss
@@ -1,6 +1,8 @@
+@import './styles/colors';
+
 .resources-found {
     margin-top: 0;
     margin-bottom: 15px;
-    color: #515151;
+    color: $dark-grey;
     font-weight: bold;
 }
