--- a/components/NavList/NavList.module.scss
+++ b/components/NavList/NavList.module.scss
@@ -1,10 +1,12 @@
+@import './styles/colors';
+
 .nav-list {
     list-style: none;
     margin: 0;
     padding: 0;
 
     &__item {
-        color: #919191;
+        color: $light-grey;
         font-size: 18px;
     }
 }
