--- a/components/User/User.module.scss
+++ b/components/User/User.module.scss
@@ -1,14 +1,16 @@
+@import './styles/colors';
+
 .user {
     display: flex;
     align-items: center;
 
     &__icon {
         font-size: 24px;
-        color: #595959;
+        color: $light-grey;
     }
 
     &__name {
-        color: #69a2c4;
+        color: $light-blue;
         font-size: 16px;
         font-weight: bold;
         margin-left: 10px;
